# polarify

./: .env.example  .flake8  Dockerfile  README.md  alembic.ini  database.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml
alembic/: env.py
alembic/versions/: 6d706726723e_add_description_to_project.py  b75d79e6ee86_initial_migration.py
app/: database.py  main.py
app/api/: analyzer.py  auth.py  project.py  sentiment_analysis.py  user.py
app/api/core/: config.py
app/api/dependencies/: auth.py  database.py
app/api/schema/: user.py
app/crud/: project.py  user.py
app/domain/: user.py
app/models/: project.py  sentiment_analysis.py  token.py  user.py
app/prompts/: content.txt  system_instructions.txt
app/repository/: auth_token.py  project.py  sentiment_analysis.py  user.py
app/services/: auth.py  prompt.py  sentiment_analysis.py  sentiment_analyzer.py
app/utils/: prompts.py
tests/: conftest.py
tests/api/: test_projects.py
tests/services/: prompts.py
