[tool.poetry]
name = "polarify"
version = "0.1.0"
description = ""
authors = ["agnieszkawojdecka <agnieszka.wojdecka@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
flake8 = "^7.3.0"
isort = "^7.0.0"
black = "^25.9.0"
mypy = "^1.18.2"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
google-genai = "^1.49.0"
pytest = "^9.0.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
