[tool.poetry]
name = "polarify"
version = "0.1.0"
description = ""
authors = ["agnieszkawojdecka <agnieszka.wojdecka@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.128.0"}
uvicorn = {extras = ["standard"], version = "^0.38.0"}
flake8 = "^7.3.0"
isort = "^7.0.0"
black = "^25.9.0"
mypy = "^1.18.2"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
google-genai = "^1.49.0"
pytest = "^9.0.0"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.44"
psycopg2 = "^2.9.11"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.12.5"}
bcrypt = "^5.0.0"
types-passlib = "^1.7.7.20250602"
sqlalchemy-stubs = "^0.4"
alembic = "^1.17.2"
pydantic-settings = "^2.12.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
